# sd_app

./: .gitignore  Makefile  README.md  models  pyproject.toml  requirements.txt
notebooks/: LDM_handler.ipynb.REMOVED.git-id  sd_cpp_app.ipynb
src/scsd/: __init__.py  geninfo.py  ldm_handler.py  ldmhelper.py  pipeline.py  schema.py  sd_handler.py  sd_hanlder.py  sdmodels.py  utils.py
src/scsd/settings/: sdxl_basic.yaml  sdxl_refine.yaml  sdxl_turbo.yaml
tests/: test_ldmhelper.py  test_model.py  test_schema.py
utils/: download_models.sh
